[package]
name = "msa301"
version = "0.0.2"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with MSA301 digital accelerometer."
# documentation = "https://docs.rs/msa301"
readme = "README.md"
keywords = ["embedded-hal-driver", "sensor", "MEMS", "msa301", "IMU", "accelerometer"]
license = "MIT"
repository = "https://github.com/nebelgrau77/lps22hb-rs"

[dependencies]
embedded-hal  = { version = "0.2" }
