[package]
name = "pico_usb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-feather-rp2040 = "0.1.0"

cortex-m = "0.7.2"
cortex-m-rt = {version = "0.7", optional = true}
rp2040-boot2 = {version = "0.2.0", optional = true}
rp2040-hal = {git = "https://github.com/rp-rs/rp-hal", branch = "main", version = "0.4.0"}
panic-halt = "0.2.0"
embedded-time = "0.12.0"
embedded-hal ="0.2.5"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

msa301 = {path = "../../drivers/msa301-rs"}

arrayvec = {version = "0.5.1", default-features = false}


[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]