[package]
name = "pico_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = "0.3.0"
rp2040-boot2 = "0.2.0"

cortex-m-rt = "0.7"
cortex-m = "0.7.2"

panic-halt = "0.2.0"

embedded-hal = { version = "0.2.5", features = ["unproven"] }

embedded-time = "0.12.0"

usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

msa301 = {path = "../../"}

arrayvec = {version = "0.5.1", default-features = false}


